# hasamishogi

./: .gitignore  AIvsAI.cpp  CMakeLists.txt  README.md  main.cpp  memo.md  vsAI.cpp
include/: board.hpp  cell.hpp  hasamishogi_AI.hpp  player.hpp
src/: CMakeLists.txt  board.cpp  cell.cpp  hasamishogi_AI.cpp  player.cpp
